c2rust-transpile/tests/snapshots/snapshots__transpile@rotate.c.2024.macos.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/rotate.2024.macos.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[unsafe(no_mangle)]
pub unsafe extern "C" fn rotate_left_64(
    mut x: ::core::ffi::c_ulonglong,
) -> ::core::ffi::c_ulonglong {
    return x.rotate_left(4 as ::core::ffi::c_ulonglong as u32);
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn rotate_right_64(
    mut x: ::core::ffi::c_ulonglong,
) -> ::core::ffi::c_ulonglong {
    return x.rotate_right(4 as ::core::ffi::c_ulonglong as u32);
}
